src/main/java/org/example/rippleback/core/error/exceptions/common/InternalServerException.java
package org.example.rippleback.core.error.exceptions.common;

public class InternalServerException extends RuntimeException {
    public InternalServerException(String message) {
        super(message);
    }
}
